# rfc2047-decoder

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  release.yaml  tests.yaml
examples/: decode.rs
src/: decoder.rs  evaluator.rs  lexer.rs  lib.rs  parser.rs  parser.rs.orig
src/lexer/: encoded_word.rs  mod.rs
